--- a/src/main/webapp/i18n/hi/global.json
+++ b/src/main/webapp/i18n/hi/global.json
@@ -8,6 +8,7 @@
             "entities": {
                 "main": "एंटिटीज़",
                 "coreOrganization": "Organization",
+                "corePost": "Post",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
