--- a/src/main/webapp/i18n/hi/global.json
+++ b/src/main/webapp/i18n/hi/global.json
@@ -9,6 +9,8 @@
                 "main": "एंटिटीज़",
                 "coreOrganization": "Organization",
                 "corePost": "Post",
+                "coreCategory": "Category",
+                "coreTag": "Tag",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
