--- a/src/main/webapp/i18n/en/coreTag.json
+++ b/src/main/webapp/i18n/en/coreTag.json
@@ -17,7 +17,8 @@
             "name": "Name",
             "slug": "Slug",
             "description": "Description",
-            "meta": "Meta"
+            "clientId": "Client Id",
+            "post": "Post"
         }
     },
     "coreApp": {
