--- a/src/main/webapp/i18n/hi/coreStatus.json
+++ b/src/main/webapp/i18n/hi/coreStatus.json
@@ -15,7 +15,9 @@
                 "title": "Status"
             },
             "name": "Name",
-            "clientId": "Client Id"
+            "clientId": "Client Id",
+            "isDefault": "Is Default",
+            "post": "Post"
         }
     },
     "coreApp": {
