--- a/src/main/webapp/i18n/hi/coreRole.json
+++ b/src/main/webapp/i18n/hi/coreRole.json
@@ -15,6 +15,7 @@
             },
             "name": "Name",
             "clientId": "Client Id",
+            "isDefault": "Is Default",
             "degaUser": "Dega User"
         }
     },
