Modified entities: Role, Format, Claimant, Rating, Status, Claim

--- a/src/main/webapp/i18n/en/coreFormat.json
+++ b/src/main/webapp/i18n/en/coreFormat.json
@@ -17,6 +17,7 @@
             "isDefault": "Is Default",
             "clientId": "Client Id",
             "description": "Description",
+            "slug": "Slug",
             "post": "Post"
         }
     },
