--- a/src/main/webapp/i18n/es/coreStatus.json
+++ b/src/main/webapp/i18n/es/coreStatus.json
@@ -16,6 +16,7 @@
             "name": "Name",
             "clientId": "Client Id",
             "isDefault": "Is Default",
+            "slug": "Slug",
             "post": "Post"
         }
     },
