--- a/src/main/webapp/i18n/es/factcheckRating.json
+++ b/src/main/webapp/i18n/es/factcheckRating.json
@@ -18,6 +18,7 @@
             "iconURL": "Icon URL",
             "isDefault": "Is Default",
             "clientId": "Client Id",
+            "slug": "Slug",
             "claim": "Claim"
         }
     },
