--- a/src/main/webapp/i18n/hi/factcheckClaimant.json
+++ b/src/main/webapp/i18n/hi/factcheckClaimant.json
@@ -18,6 +18,7 @@
             "description": "Description",
             "imageURL": "Image URL",
             "clientId": "Client Id",
+            "slug": "Slug",
             "claim": "Claim"
         }
     },
