Added Entity: Factcheck, Modified Entity Claim to add relation to factcheck

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -19,6 +19,7 @@
                 "factcheckRating": "Rating",
                 "factcheckClaim": "Claim",
                 "factcheckClaimant": "Claimant",
+                "factcheckFactCheck": "Fact Check",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
