--- a/src/main/webapp/i18n/hi/factcheckClaim.json
+++ b/src/main/webapp/i18n/hi/factcheckClaim.json
@@ -24,7 +24,8 @@
             "clientId": "Client Id",
             "slug": "Slug",
             "rating": "Rating",
-            "claimant": "Claimant"
+            "claimant": "Claimant",
+            "factCheck": "Fact Check"
         }
     },
     "factcheckApp": {
