Publish/Save Draft post

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -111,7 +111,8 @@
             "delete": "Delete",
             "edit": "Edit",
             "open": "Open",
-            "save": "Save",
+            "publish": "Publish",
+            "save": "Save Draft",
             "view": "View"
         },
         "detail": {
