publish/save post

--- a/src/main/webapp/i18n/en/corePost.json
+++ b/src/main/webapp/i18n/en/corePost.json
@@ -31,7 +31,7 @@
             "category": "Category",
             "status": "Status",
             "format": "Format",
-            "degaUser": "Dega User"
+            "degaUser": "Author"
         }
     },
     "coreApp": {
