--- a/src/main/webapp/i18n/hi/factcheckClaim.json
+++ b/src/main/webapp/i18n/hi/factcheckClaim.json
@@ -26,7 +26,7 @@
             "createdDate": "Created Date",
             "rating": "Rating",
             "claimant": "Claimant",
-            "factCheck": "Fact Check"
+            "factcheck": "Fact Check"
         }
     },
     "factcheckApp": {
