--- a/src/main/webapp/i18n/en/coreCategory.json
+++ b/src/main/webapp/i18n/en/coreCategory.json
@@ -19,6 +19,7 @@
             "parent": "Parent",
             "clientId": "Client Id",
             "createdDate": "Created Date",
+            "lastUpdatedDate": "Last Updated Date",
             "post": "Post"
         }
     },
