--- a/src/main/webapp/i18n/es/coreFormat.json
+++ b/src/main/webapp/i18n/es/coreFormat.json
@@ -19,6 +19,7 @@
             "description": "Description",
             "slug": "Slug",
             "createdDate": "Created Date",
+            "lastUpdatedDate": "Last Updated Date",
             "post": "Post"
         }
     },
