Modified Entity: Tag. Added LastUpdatedDate

--- a/src/main/webapp/i18n/en/coreTag.json
+++ b/src/main/webapp/i18n/en/coreTag.json
@@ -18,6 +18,7 @@
             "description": "Description",
             "clientId": "Client Id",
             "createdDate": "Created Date",
+            "lastUpdatedDate": "Last Updated Date",
             "post": "Post"
         }
     },
