--- a/src/main/webapp/i18n/es/factcheckClaimant.json
+++ b/src/main/webapp/i18n/es/factcheckClaimant.json
@@ -20,6 +20,7 @@
             "clientId": "Client Id",
             "slug": "Slug",
             "createdDate": "Created Date",
+            "lastUpdatedDate": "Last Updated Date",
             "claim": "Claim"
         }
     },
