Changes for upload an image in Media

--- a/src/main/webapp/i18n/en/coreMedia.json
+++ b/src/main/webapp/i18n/en/coreMedia.json
@@ -27,7 +27,8 @@
             "lastUpdatedDate": "Last Updated Date",
             "slug": "Slug",
             "clientId": "Client Id",
-            "createdDate": "Created Date"
+            "createdDate": "Created Date",
+            "thumbnail": "Thumbnail"
         }
     },
     "coreApp": {
