--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -113,7 +113,8 @@
             "open": "Open",
             "publish": "Publish",
             "save": "Save Draft",
-            "view": "View"
+            "view": "View",
+            "upload": "Upload"
         },
         "detail": {
             "field": "Field",
