save draft for post and fact check

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -112,9 +112,10 @@
             "edit": "Edit",
             "open": "Open",
             "publish": "Publish",
-            "save": "Save Draft",
+            "save": "Save",
             "view": "View",
-            "upload": "Upload"
+            "upload": "Upload",
+            "savedraft": "Save Draft"
         },
         "detail": {
             "field": "Field",
