Changed labels for values in Organization entity

--- a/src/main/webapp/i18n/en/coreOrganization.json
+++ b/src/main/webapp/i18n/en/coreOrganization.json
@@ -18,10 +18,10 @@
             "siteTitle": "Site Title",
             "tagLine": "Tag Line",
             "description": "Description",
-            "logoURL": "Logo URL",
-            "logoURLMobile": "Logo URL Mobile",
-            "favIconURL": "Fav Icon URL",
-            "mobileIconURL": "Mobile Icon URL",
+            "logoURL": "Logo",
+            "logoURLMobile": "Mobile Logo",
+            "favIconURL": "Fav Icon",
+            "mobileIconURL": "Mobile Icon",
             "baiduVerificationCode": "Baidu Verification Code",
             "bingVerificationCode": "Bing Verification Code",
             "googleVerificationCode": "Google Verification Code",
