--- a/src/main/webapp/i18n/es/home.json
+++ b/src/main/webapp/i18n/es/home.json
@@ -1,19 +1,19 @@
 {
     "home": {
-        "title": "¡Bienvenido, Java Hipster!",
+        "title": "¡Bienvenido, Fact Checker!",
         "subtitle": "Esta es su página de inicio",
         "logged": {
             "message": "Está conectado como \"{{username}}\"."
         },
-        "question": "Si tiene preguntas sobre JHipster:",
+        "question": "Si tiene preguntas sobre Dega:",
         "link": {
-            "homepage": "Página de inicio de JHipster",
-            "stackoverflow": "JHipster en Stack Overflow",
-            "bugtracker": "JHipster seguimiento de errores",
-            "chat": "Sala de chat pública de JHipster",
-            "follow": "contacto @java_hipster en Twitter"
+            "homepage": "Página de inicio de Dega",
+            "stackoverflow": "Dega en Stack Overflow",
+            "bugtracker": "Dega seguimiento de errores",
+            "chat": "Sala de chat pública de Dega",
+            "follow": "contacto @factlyindia en Twitter"
         },
-        "like": "Si te gusta JHipster, danos una estrella en",
+        "like": "Si te gusta Dega, danos una estrella en",
         "github": "GitHub"
     }
 }
