--- a/src/main/webapp/i18n/hi/home.json
+++ b/src/main/webapp/i18n/hi/home.json
@@ -1,19 +1,19 @@
 {
     "home": {
-        "title": "आपका स्वागत है, Java Hipster!",
+        "title": "आपका स्वागत है, Fact Checker!",
         "subtitle": "यह आपका होमपेज है",
         "logged": {
             "message": "आप उपयोगकर्ता \"{{username}}\" के रूप में लॉग ऑन हैं "
         },
-        "question": "यदि आप JHipster पर किसी भी सवाल है:",
+        "question": "यदि आप Dega पर किसी भी सवाल है:",
         "link": {
-            "homepage": "JHipster मुखपृष्ठ",
-            "stackoverflow": "JHipster स्टैक ओवरफ़्लो",
-            "bugtracker": "JHipster बग tracker",
-            "chat": "JHipster सार्वजनिक चैट रूम",
-            "follow": "@java_hipster ट्विटर पर फौलो करें"
+            "homepage": "Dega मुखपृष्ठ",
+            "stackoverflow": "Dega स्टैक ओवरफ़्लो",
+            "bugtracker": "Dega बग tracker",
+            "chat": "Dega सार्वजनिक चैट रूम",
+            "follow": "@factlyindia ट्विटर पर फौलो करें"
         },
-        "like": "यदि आपको JHipster पसंद है, तो हमें  एक स्टार देना न भूलें",
+        "like": "यदि आपको Dega पसंद है, तो हमें  एक स्टार देना न भूलें",
         "github": "GitHub"
     }
 }
