23: Changed Rating icon from url to thumbnail

--- a/src/main/webapp/i18n/en/factcheckRating.json
+++ b/src/main/webapp/i18n/en/factcheckRating.json
@@ -15,7 +15,7 @@
             },
             "name": "Name",
             "numericValue": "Numeric Value",
-            "iconURL": "Icon URL",
+            "iconURL": "Icon",
             "isDefault": "Is Default",
             "clientId": "Client Id",
             "slug": "Slug",
