--- a/src/main/webapp/i18n/en/factcheckClaimant.json
+++ b/src/main/webapp/i18n/en/factcheckClaimant.json
@@ -16,7 +16,7 @@
             "name": "Name",
             "tagLine": "Tag Line",
             "description": "Description",
-            "imageURL": "Image URL",
+            "imageURL": "Claimant",
             "clientId": "Client Id",
             "slug": "Slug",
             "createdDate": "Created Date",
