--- a/src/main/webapp/i18n/hi/coreOrganization.json
+++ b/src/main/webapp/i18n/hi/coreOrganization.json
@@ -56,6 +56,8 @@
             "email": "Email",
             "createdDate": "Created Date",
             "lastUpdatedDate": "Last Updated Date",
+            "siteAddress": "Site Address",
+            "enableFactchecking": "Enable Factchecking",
             "degaUser": "Dega User",
             "degaUserDefault": "Dega User Default",
             "degaUserCurrent": "Dega User Current"
