Added RoleMapping entity and relationships with Role, Organization, DegaUser entities. Cleaned up commented out code. Fixes #108

--- a/src/main/webapp/i18n/en/coreDegaUser.json
+++ b/src/main/webapp/i18n/en/coreDegaUser.json
@@ -33,7 +33,8 @@
             "organization": "Organization",
             "organizationDefault": "Organization Default",
             "organizationCurrent": "Organization Current",
-            "post": "Post"
+            "post": "Post",
+            "roleMapping": "Role Mapping"
         }
     },
     "coreApp": {
