--- a/src/main/webapp/i18n/es/global.json
+++ b/src/main/webapp/i18n/es/global.json
@@ -20,6 +20,7 @@
                 "factcheckClaim": "Claim",
                 "factcheckClaimant": "Claimant",
                 "factcheckFactcheck": "Factcheck",
+                "coreRoleMapping": "Role Mapping",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
