--- a/src/main/webapp/i18n/hi/coreRole.json
+++ b/src/main/webapp/i18n/hi/coreRole.json
@@ -19,7 +19,8 @@
             "slug": "Slug",
             "createdDate": "Created Date",
             "lastUpdatedDate": "Last Updated Date",
-            "degaUser": "Dega User"
+            "degaUser": "Dega User",
+            "roleMapping": "Role Mapping"
         }
     },
     "coreApp": {
