Changed order of entites and icons in the side bar

--- a/src/main/webapp/i18n/en/coreDegaUser.json
+++ b/src/main/webapp/i18n/en/coreDegaUser.json
@@ -11,7 +11,7 @@
                 "question": "Are you sure you want to delete Dega User {{ id }}?"
             },
             "detail": {
-                "title": "Dega User"
+                "title": "User"
             },
             "firstName": "First Name",
             "lastName": "Last Name",
