Closes 123-Change-in-organization-should-change-the-user-role-as-per-role-mapping

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -96,7 +96,8 @@
             }
         },
         "field": {
-            "id": "ID"
+            "id": "ID",
+            "keycloakid": "Keycloak ID"
         },
         "ribbon": {
             "dev": "Development"
