--- a/src/main/webapp/i18n/hi/global.json
+++ b/src/main/webapp/i18n/hi/global.json
@@ -46,7 +46,11 @@
                 "database": "डेटाबेस",
                 "jhipster-needle-menu-add-admin-element": "JHipster will add additional menu entries here (do not translate!)"
             },
-            "language": "भाषा"
+            "language": "भाषा",
+            "sidenav": {
+                "core": "Core",
+                "factchecking": "Fact-checking"
+            }
         },
         "form": {
             "username": "उपयोगकर्ता नाम",
