--- a/src/main/webapp/i18n/en/coreMedia.json
+++ b/src/main/webapp/i18n/en/coreMedia.json
@@ -6,7 +6,7 @@
                 "createLabel": "Create a new Media",
                 "createOrEditLabel": "Create or edit a Media",
                 "search": "Search for Media",
-                "c": "Upload Media"
+                "uploadMediaLabel": "Upload Media"
             },
             "delete": {
                 "question": "Are you sure you want to delete Media {{ id }}?"
