--- a/src/main/webapp/i18n/hi/factcheckClaimant.json
+++ b/src/main/webapp/i18n/hi/factcheckClaimant.json
@@ -21,7 +21,9 @@
             "slug": "Slug",
             "createdDate": "Created Date",
             "lastUpdatedDate": "Last Updated Date",
-            "claim": "Claim"
+            "claim": "Claim",
+            "image": "Image",
+            "uploadImage": "Upload Image"
         }
     },
     "factcheckApp": {
