Fixes #280: Added privacy policy page

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -47,6 +47,7 @@
                 "jhipster-needle-menu-add-admin-element": "JHipster will add additional menu entries here (do not translate!)"
             },
             "language": "Language",
+            "privacy.policy": "Privacy Policy",
             "sidenav": {
                 "core": "Core",
                 "factchecking": "Fact-checking"
